remove key for palette toggling. put setting for palette name instead

--- a/GB.cfg
+++ b/GB.cfg
@@ -1,6 +1,7 @@
 [GB]
 bios = mybootrom.bin
 fullscreen = off
+palette = Palette_SGB
 
 [Controls]
 a = s
@@ -12,8 +13,11 @@ down = arrow_down
 left = arrow_left
 right = arrow_right
 
-[Palette]
-c0=0xe0f8d0
-c1=0x88c070
-c2=0x346856
-c3=0x081820
+
+; Palettes definitions
+; see https://lospec.com/palette-list/tag/gameboy/ for a good list of palettes
+[Palette_SGB]
+c3=0x331e50
+c2=0xa63725
+c1=0xd68e49
+c0=0xf7e7c6
